--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,10 @@ header h1 {
 .description img {
     float: left;
     margin: 0 10px 10px 0;
+    transition-property: opacity;
+    transition-duration: 1s;
+    transition-timing-function:linear;
+    transition-delay: 0s;
 }
 .information h1 {
     font-size: 18px;
@@ -86,6 +90,6 @@ footer {
         margin: 0 auto;
     }
 }
-.discription img:hover {
-    opacity: .9;
+.description img:hover {
+    opacity: .5;
 }
